# hdfx

./: .gitignore  README.md  pyproject.toml  todo.md
src/hdfx/: __init__.py  base.py  cli.py  merge.py  shard.py  shuffle.py  statistics.py
tests/: test_base.py  test_operations.py  test_statistics.py
